<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.hasor</groupId>
    <artifactId>dbvisitor-parent</artifactId>
    <version>6.3.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <!-- Project Info -->
    <name>dbVisitor POM</name>
    <description>the DataBase visitor ORM Tools.</description>
    <url>https://www.dbvisitor.net/</url>
    <inceptionYear>2022</inceptionYear>

    <!-- 配置属性 -->
    <properties>
        <downloadSources>true</downloadSources>
        <downloadJavadocs>true</downloadJavadocs>
        <jacoco.version>0.8.5</jacoco.version>
        <!--<maven.test.skip>true</maven.test.skip>-->
        <!--<skipTests>true</skipTests>-->
    </properties>

    <!-- 授权协议 -->
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <!-- SCM -->
    <scm>
        <connection>scm:git:git@gitee.com:zycgit/dbvisitor.git</connection>
        <developerConnection>scm:git:git@gitee.com:zycgit/dbvisitor.git</developerConnection>
        <url>https://www.dbvisitor.net/</url>
        <tag>v5.4.4</tag>
    </scm>

    <developers>
        <developer>
            <name>赵永春(Mr.Zhao)</name>
            <email>zyc@hasor.net</email>
        </developer>
    </developers>

    <modules>
        <module>dbvisitor</module>
        <module>dbvisitor-driver</module>
        <module>dbvisitor-integration/dbvisitor-spring</module>
        <module>dbvisitor-integration/dbvisitor-spring-starter</module>
        <module>dbvisitor-integration/dbvisitor-hasor</module>
        <module>dbvisitor-integration/dbvisitor-guice</module>
        <module>dbvisitor-integration/dbvisitor-solon-plugin</module>
        <module>dbvisitor-adapter/jdbc-redis</module>
        <module>dbvisitor-adapter/jdbc-mongo</module>
        <!-- <module>dbvisitor-adapter/adapter-es6</module>-->
        <!-- <module>dbvisitor-adapter/adapter-es7</module>-->
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>net.hasor</groupId>
                <artifactId>cobble-all</artifactId>
                <version>4.8.3</version>
            </dependency>
            <dependency>
                <groupId>net.hasor</groupId>
                <artifactId>dbvisitor</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>net.hasor</groupId>
                <artifactId>dbvisitor-driver</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>net.hasor</groupId>
                <artifactId>dbvisitor-spring</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>net.hasor</groupId>
                <artifactId>jdbc-redis</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>net.hasor</groupId>
                <artifactId>jdbc-mongo</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- other dependencies -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-runtime</artifactId>
                <version>4.13.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- 构建描述 -->
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>org.apache.maven.plugins</groupId>
                                        <artifactId>maven-dependency-plugin</artifactId>
                                        <versionRange>[1.0.0,)</versionRange>
                                        <goals>
                                            <goal>copy-dependencies</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore />
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <!-- Compile -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <encoding>UTF8</encoding>
                </configuration>
            </plugin>
            <!-- Source -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Javadoc -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <failOnError>false</failOnError>
                    <failOnWarnings>false</failOnWarnings>
                    <doclint>none</doclint>
                    <additionalJOption>--allow-script-in-comments</additionalJOption>
                    <encoding>UTF-8</encoding>
                    <docencoding>UTF-8</docencoding>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- resources -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <!-- eclipse 插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.10</version>
                <configuration>
                    <workspace>${basedir}</workspace>
                    <downloadSources>${downloadSources}</downloadSources>
                    <downloadJavadocs>${downloadJavadocs}</downloadJavadocs>
                </configuration>
            </plugin>
            <!-- Test 失败继续 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>
            <!-- 覆盖率 -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <outputDirectory>${project.basedir}/target/jacoco-ut</outputDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- 使用“-P release”启用下面配置 -->
    <profiles>
        <profile>
            <id>release</id>
            <properties>
                <gpg.passphrase>fubing220106</gpg.passphrase>
            </properties>
            <build>
                <plugins>
                    <!-- GPG -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.8</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!-- publishing -->
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.5.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-release-plugin</artifactId>
                        <version>3.0.1</version>
                        <configuration>
                            <autoVersionSubmodules>true</autoVersionSubmodules>
                            <useReleaseProfile>false</useReleaseProfile>
                            <releaseProfiles>release</releaseProfiles>
                            <tagNameFormat>v@{project.version}</tagNameFormat>
                            <goals>deploy</goals>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>jdk-1.8</id>
            <activation>
                <jdk>1.8</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.2.5</version>
                        <configuration>
                            <testFailureIgnore>true</testFailureIgnore>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>jdk-default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <jdk>!1.8</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.2.5</version>
                        <configuration>
                            <testFailureIgnore>true</testFailureIgnore>
                            <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
                            <argLine>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</argLine>
                            <argLine>--add-opens=java.base/java.io=ALL-UNNAMED</argLine>
                            <argLine>--add-opens=java.base/java.net=ALL-UNNAMED</argLine>
                            <!-- <argLine>&#45;&#45;add-opens=jdk.unsupported=ALL-UNNAMED</argLine>-->
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>